updated linking for example to point out the constness of arrays as pointers.

--- a/igme_config.yml
+++ b/igme_config.yml
@@ -13,4 +13,4 @@ connections:
   - series: Basic C++
     title: Arrays
   - series: Basic C++
-    title: The Stack and the Heap
+    title: The Const Keyword
